# mediaSorterByNir

./: CMakeLists.txt  Features_Currently_Supported.docx  appIcon.rc  clickablelabel.cpp  clickablelabel.h  custommessagebox.cpp  custommessagebox.h  hoveredobject.cpp  hoveredobject.h  mainsortingwindow.cpp  mainsortingwindow.h  mainsortingwindow.ui  pathsscreen.cpp  pathsscreen.h  pathsscreen.ui  resource.qrc  startupscreen.cpp  startupscreen.h  startupscreen.ui  widget.cpp  widget.h
libRaw/: Makefile.mingw
